add exam routes + docs
